Added animations for collapsing and expanding list views.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
 
             android:name=".activity.HomeActivity"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait">
 
             <intent-filter>
