--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
 
     }
+
     buildTypes {
 
         release {
@@ -38,5 +39,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'net.danlew:android.joda:2.9.3.1'
     compile 'com.github.ivbaranov:materiallettericon:0.2.2'
+    compile 'org.xdty.preference:color-picker:0.0.4'
 
 }
