Cleanup and better classes fragment implementation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,14 @@
 
         </activity>
 
+        <activity
+
+            android:name=".activity.AddClassIntoTimetable"
+            android:parentActivityName=".activity.Main"
+            android:screenOrientation="portrait">
+
+        </activity>
+
         <service
 
             android:name=".service.Background"
