--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:support-v13:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'net.danlew:android.joda:2.9.3.1'
-    compile 'com.github.ivbaranov:materiallettericon:0.2.2'
     compile 'org.xdty.preference:color-picker:0.0.4'
 
 }
