--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
 
         <activity
 
-            android:name=".activity.AddClassIntoTimetable"
+            android:name=".activity.EditDay"
             android:parentActivityName=".activity.Main"
             android:screenOrientation="portrait">
 
