--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity
 
             android:name=".activity.EditDay"
+            android:hardwareAccelerated="true"
             android:parentActivityName=".activity.Main"
             android:screenOrientation="portrait">
 
