--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,40 +1,35 @@
 apply plugin: 'com.android.application'
 
 android {
-
+    signingConfigs {
+        release {
+            keyAlias 'release'
+            keyPassword 'international176'
+            storeFile file('/home/armin/Keys/release.jks')
+            storePassword 'international176'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
-
     defaultConfig {
 
         applicationId "com.ghofrani.classapp"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName '0.0.1'
 
     }
-
     buildTypes {
-
         release {
-
             minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
+            proguardFile '/home/armin/android/Sdk/tools/proguard/proguard-android.txt'
+            signingConfig signingConfigs.release
         }
-
         debug {
-
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
+            minifyEnabled false
         }
-
     }
-
 }
 
 repositories {
@@ -44,8 +39,7 @@ repositories {
 }
 
 dependencies {
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
@@ -56,5 +50,4 @@ dependencies {
     compile 'net.danlew:android.joda:2.9.3.1'
     compile 'org.xdty.preference:color-picker:0.0.4'
     compile 'com.borax12.materialdaterangepicker:library:1.7'
-
 }
