--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.ghofrani.classapp"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName '0.0.1'
+        versionCode 2
+        versionName '0.0.2'
 
     }
     buildTypes {
@@ -29,6 +29,8 @@ android {
         debug {
             minifyEnabled false
         }
+    }
+    productFlavors {
     }
 }
 
