--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     compile 'net.danlew:android.joda:2.9.4.1'
     compile 'org.xdty.preference:color-picker:0.0.4'
     compile 'com.borax12.materialdaterangepicker:library:1.7'
+    compile 'com.github.citux:datetimepicker:0.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
 }
