--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
 
         android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+    <uses-permission
+
+        android:name="android.permission.VIBRATE" />
+
     <application
 
         android:allowBackup="true"
