--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFile '/home/armin/android/Sdk/tools/proguard/proguard-android.txt'
+            proguardFile '/home/armin/Proguard/proguard-android.txt'
             signingConfig signingConfigs.release
         }
         debug {
@@ -37,6 +37,9 @@ android {
 repositories {
 
     jcenter()
+    maven {
+        url "https://s3.amazonaws.com/repo.commonsware.com"
+    }
 
 }
 
@@ -55,4 +58,5 @@ dependencies {
     compile 'com.borax12.materialdaterangepicker:library:1.7'
     compile 'com.github.citux:datetimepicker:0.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
+
 }
