--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     compile 'com.borax12.materialdaterangepicker:library:1.7'
     compile 'com.github.citux:datetimepicker:0.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
 
 }
