--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
 
             android:name=".activity.Main"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait">
 
             <intent-filter>
