--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile 'com.github.citux:datetimepicker:0.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
