--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
 
         <activity
 
-            android:name=".activity.AddHomework"
+            android:name=".activity.AddEvent"
             android:launchMode="singleTop"
             android:parentActivityName=".activity.Main"
             android:screenOrientation="portrait">
