--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ android {
     signingConfigs {
         release {
             keyAlias 'release'
-            keyPassword 'international176'
-            storeFile file('/home/armin/Keys/release.jks')
-            storePassword 'international176'
+            keyPassword KEY_PASSWORD
+            storeFile file('release.jks')
+            storePassword STORE_PASSWORD
         }
     }
     compileSdkVersion 25
@@ -23,7 +23,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFile '/home/armin/AndroidStudioProjects/ClassApp/app/proguard-android.txt'
+            proguardFile 'proguard-android.txt'
             signingConfig signingConfigs.release
         }
         debug {
@@ -43,22 +43,22 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:support-v13:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'net.danlew:android.joda:2.9.5'
-    compile 'org.xdty.preference:color-picker:0.0.4'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'net.danlew:android.joda:2.9.9'
+    compile 'org.xdty.preference:color-picker:0.0.5'
     compile 'com.borax12.materialdaterangepicker:library:1.9'
-    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
-    compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.2'
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile('de.psdev.licensesdialog:licensesdialog:1.8.1')
+    compile 'de.psdev.licensesdialog:licensesdialog:1.8.2'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
-    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.0@aar') {
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
         transitive = true
     }
 }
