--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFile 'proguard-android.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt')
             signingConfig signingConfigs.release
         }
         debug {
@@ -52,8 +52,8 @@ dependencies {
     compile 'net.danlew:android.joda:2.9.9'
     compile 'org.xdty.preference:color-picker:0.0.5'
     compile 'com.borax12.materialdaterangepicker:library:1.9'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-    compile 'com.afollestad.material-dialogs:commons:0.9.4.5'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.7'
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.7'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'de.psdev.licensesdialog:licensesdialog:1.8.2'
+    compile 'de.psdev.licensesdialog:licensesdialog:1.8.3'
 }
